fix: layout is not responsive in mobile view

--- a/style.css
+++ b/style.css
@@ -1,9 +1,4 @@
 :root {
-    /* --color-dark: #222831;
-    --color-gray: #393E46;
-    --color-teal: #00ADB5;
-    --color-light: #EEEEEE; */
-
     --color-light: #F9F7F7;
     --color-grey: #DBE2EF;
     --color-blue: #3F72AF;
@@ -186,6 +181,7 @@ article {
 .article-portfolio section {
     display: grid;
     grid-template-columns: 1fr 2fr;
+    margin: auto;
 }
 
 .article-portfolio section h2 {
@@ -209,28 +205,29 @@ article {
     color: var(--color-navy);
 }
 
+.article-portfolio section .card-portfolio:hover > .portfolio-img {
+    transform: translateY(0.5rem);
+    transition: 300ms all ease-out;
+}
+
 .article-portfolio section .card-portfolio .portfolio-img {
     width: 100%;
-    height: 24rem;
-    border-radius: 0.5rem;
-    box-shadow: 1px 1px 4px 2px rgba(0, 0, 0, 0.1);
+    min-height: 16rem;
 }
 
 .article-portfolio section .card-portfolio .portfolio-1-img {
     background-image: url("./assets/images/portfolio-1.png");
-    background-size: cover;
+    background-size: contain;
     background-repeat: no-repeat;
-    background-position: center bottom;    
+    background-position: center;
 }
 
 .article-portfolio section .card-portfolio .portfolio-2-img {
     background-image: url("./assets/images/portfolio-2.png");
-    background-size: cover;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
 }
-
-/* .article-portfolio section .card-portfolio img {
-    width: 100%;
-} */
 
 .article-portfolio section .card-portfolio .portfolio-detail {
     padding-top: 1rem;
@@ -320,12 +317,24 @@ footer {
 }
 
 @media only screen and (max-width: 576px) {
+    article {
+        padding-top: 4rem;
+        padding-bottom: 4rem;
+        padding-left: 2rem;
+        padding-right: 2rem;
+    }
+    .article-aboutme section p {
+        font-size: 1.25rem;
+    }
     .article-aboutme section h2,
     .article-skill section h2,
     .article-portfolio section h2 {
-        font-size: 2.5rem;
+        font-size: 2rem;
     }
     .article-skill .card-skill img {
-        max-height: 3rem;
+        max-height: 2rem;
+    }
+    .article-portfolio section .card-portfolio .portfolio-img {
+        min-height: 10rem;
     }
 }
